@@ -296,3 +296,6 @@ telescop = "BART"
 
 ; Institution/observer
 origin = "AsU AV CR"
+
+; Space separated list of environmental variables names, which should be recorded to FITS header.
+environment = "PATH HELP USER"
