@@ -1,3 +1,6 @@
+2008-12-14
+ * [2315461] record environment values
+
 2008-11-22
  * [2074047] fixed
 
